Commit de Alvaro

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/BS_Ferrocarril.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.PlaceHolder.jar=C:\\Users\\cesar_000\\Documents\\NetBeansProjects\\PlaceHolder.jar
+file.reference.PlaceHolder.jar-1=C:\\Users\\Strin\\OneDrive\\Documentos\\NetBeansProjects\\PlaceHolder.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.PlaceHolder.jar}
+    ${file.reference.PlaceHolder.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
